--- a/180121_Pipeline/src/main/webapp/index.html
+++ b/180121_Pipeline/src/main/webapp/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h3>HELLO WORLD!</h3>
-	<p>Check out my new code!!!!</p>
+	<p>Please god, Devops week lord, work!</p>
 </body>
 </html>
