--- a/180121_Pipeline/src/main/webapp/index.html
+++ b/180121_Pipeline/src/main/webapp/index.html
@@ -4,7 +4,7 @@
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
-<body style="background-color:red">
+<body style="background-color:red;color:white">
 	<h3>HELLO WORLD!</h3>
 	<p>Please god, Devops week lord, work!</p>
 </body>
